# bluroma-py

./: .env.example  .gitignore  README.md  app.py  dependencies.txt  pyproject.toml  readme.md  requirements.txt
bluroma/db/: db.py
bluroma/db/migrations/: 20241125-initial.sql
bluroma/login/: session.py  user_resolution.py
static/: style.css
templates/: 404.html  base.html  dash.html  index.html
